--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ add_executable(gv
 add_executable(Tests
         test/NodeTest.cpp
         test/EdgeTest.cpp
-        test/GraphTest.cpp)
+        test/GraphTest.cpp
+        test/ButtonTest.cpp)
 
 target_compile_features(gv PRIVATE cxx_std_17)
 target_link_libraries(gv PRIVATE SFML::Graphics)
