Refactor edges with unique pointers, BFS implementation/testing, GUI implementations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ add_executable(Tests
         test/NodeTest.cpp
         test/EdgeTest.cpp
         test/GraphTest.cpp
-        test/ButtonTest.cpp)
+        test/ButtonTest.cpp
+        test/AlgorithmTest.cpp)
 
 target_compile_features(gv PRIVATE cxx_std_17)
 target_link_libraries(gv PRIVATE SFML::Graphics)
